# PavicCompiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  TESTING_RESULTS.md  pavicc
src/: ast.cpp  ast.hpp  ast_lower.cpp  ast_lower.hpp  cst.cpp  cst.hpp  diagnostic.cpp  diagnostic.hpp  lexer.cpp  lexer.hpp  main.cpp  multi_backend.cpp  multi_backend.hpp  optimizer.cpp  optimizer.hpp  parser.cpp  parser.hpp  semantic_scope.cpp  semantic_scope.hpp  semantic_type.cpp  semantic_type.hpp  semantic_usage.cpp  semantic_usage.hpp  source.cpp  source.hpp  symbol_table.cpp  symbol_table.hpp  token.cpp  token.hpp
src/codegen/: code_buffer.cpp  code_buffer.hpp  codegen.cpp  codegen.hpp  memory_layout.cpp  memory_layout.hpp  target.hpp
testcases/: alphabet_print.markos  longtest.markos  string_comparison.markos  string_reassingment.markos
testcases/marko test final/: 01_lex_invalid_char.markos  02_add_chain.markos  03_if_comparisons.markos  04_while_count.markos  05_nested_while.markos  06_boolean_assign.markos  07_string_print.markos  08_string_reassign_compare.markos  09_scope_shadow.markos  10_mixed_features.markos  11_world_cup_winner.markos
testcases/marko_suite/: marko1.markos  marko10.markos  marko11.markos  marko12.markos  marko13.markos  marko14.markos  marko15.markos  marko16.markos  marko17.markos  marko18.markos  marko19.markos  marko2.markos  marko20.markos  marko21.markos  marko22.markos  marko3.markos  marko4.markos  marko5.markos  marko6.markos  marko7.markos  marko8.markos  marko9.markos
testcases/new_tests/: a.markos  aa.markos  ab.markos  ac.markos  ad.markos  ae.markos  af.markos  ag.markos  ah.markos  ai.markos  ak.markos  al.markos  am.markos  an.markos  ao.markos  ap.markos  aq.markos  ar.markos  as.markos  at.markos  au.markos  (+115 more)
tests/: run_marko_final_multibackend.sh  run_phase_tests.sh
(+13 files in other folders)
